Week of 4/7/2023: Karl
- Dockerized the go server
- Deployed to the cloud (Kamatera)
- New flags for process start:
   - --nocli={true|false} : starts server with/without cli 
   - --env=my_env_path - starts server with path to .env file 
   - --docker={true|false} - defaults to false. Starts server in docker mode. This configures how the connection to the database is made. 
- Dockerfile builds a custom image of the server 
- Added PostgresDocker to Config to track whether in Docker mode 
- Got rid of second migration. It had problems incrementing the IDs and had some annoying bugs. 


3/29/2023: Karl 
- Ban pipeline finished
- Domain banning and global banning 
- Making profileUpdateResponse a polymorphic method of controllers


3/24/2023: Karl 
- ViewModRecords pipeline
- Made some schema changes, re-migrate required 

3/22/2023: Karl
- Moderate pipeline "/moderate"
- comment reports and votes won't work for removed comments
- removed comments return "~removed~" and empty string username to requesting users. This is only in the page cache, not what is stored in the database. 
- removed comments update in the page cache in real time to "remove" so we don't have to restart server to see removed comments
- viewing comment reports only shows reports that have had no action taken on them 
- Queries.GetCurrentDomain(commentID) to quickly get a comment's domain 
- 

3/21/2023: Karl
- adding logs to the database for every request. Uses a context associated with the request to update the userID in case that request results in a log-in.
- /viewLogs pipeline. Used a decently long function in package database for all the filtering. (store.GetLogs)

3/19/2023: Karl
- Update communication.CommentReport to match design document field names


3/18/2023 : Karl